Fix overflow of large text in demo for small screens

--- a/css/styles.less
+++ b/css/styles.less
@@ -134,6 +134,8 @@ h6 { font-size: 1.125em; }
 }
 
 #content {
+    overflow: hidden;
+    
     .media-experience-phone & {
         padding: 2em 1em;
     }
